compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_public_enum.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion_at_default_position(TestProject::for_source(code).add_module(\"dep\",\n        dep))"
---
[
    CompletionItem {
        label: "dep.Left",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " Direction",
                ),
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            EnumMember,
        ),
        detail: Some(
            "Direction",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "dep.Left",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "dep.Right",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " Direction",
                ),
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            EnumMember,
        ),
        detail: Some(
            "Direction",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "dep.Right",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
